Really fix countdown align

--- a/src/styles/live/full.scss
+++ b/src/styles/live/full.scss
@@ -40,7 +40,7 @@
 	text-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
 	cursor: pointer;
 
-	.countdown-time { font-size: 7.5vw; }
+	.countdown-time { font-size: 7.5vw; padding-left: 0; }
 
 	.bg {
 		position: absolute;
